--- a/python_cms/templates/post.html.j2
+++ b/python_cms/templates/post.html.j2
@@ -5,8 +5,19 @@
   {% if post.id is not defined %}
     <h1>Post not found</h1>
   {% else %}
-  <h1>{{ post.title }}</h1>
-  <img src="/files/{{post.teaser_image}}" class="img-responsive article-image-inner" alt="">
-  {{ post.body|safe }}
+    <div class="post-header">
+      <h1>{{ post.title }}</h1>
+      {% if current_user.is_authenticated %}{#delete button available only for logged in users#}
+      <button onclick="location.href='{{ url_for('pages.delete_post', post_id=post.id) }}'"
+              class="btn btn-delete tooltip-bottom"
+              data-tooltip="Permanently delete this post">
+              Delete
+      </button>
+      {% endif %}
+    </div>
+    <img src="/files/{{ post.teaser_image }}" class="img-responsive article-image-inner" alt="">
+    {{ post.body|safe }}
   {% endif %}
 {% endblock %}
+
+
