--- a/python_cms/templates/index.html.j2
+++ b/python_cms/templates/index.html.j2
@@ -4,6 +4,12 @@
   {% if posts|length == 0 %}
     <h1>We have no posts to show</h1>
   {% endif %}
+  {% for message in get_flashed_messages() %}
+    <div class="toast toast-success">
+        <button class="btn btn-clear float-right"></button>
+          {{message}}
+    </div>
+  {% endfor %}
   <div class="columns">
     {% for post in posts %}
        <div class="column col-6 col-md-12">
@@ -21,4 +27,8 @@
        </div>
     {% endfor %}
   </div>
+{% endblock %}
+{% block bodysource %}
+<script src="{{url_for('static', filename='create_post.js')}}"></script>
+
 {% endblock %}
