--- a/python_cms/templates/create_post.html.j2
+++ b/python_cms/templates/create_post.html.j2
@@ -1,10 +1,21 @@
 {% extends "base.html.j2" %}
-{% block title %}Create Post{% endblock %}
+{% block title %}
+  {% if edit %}
+    Edit Post
+  {% else %}
+    Create Post
+  {% endif %}
+{% endblock %}
 {% block headsource %}
   {{ ckeditor.load() }}
 {% endblock %}
 {% block content %}
-  <h1>Create post</h1>
+
+  {% if edit is defined and edit == True %}
+    <h1>Edit Post</h1>
+  {% else %}
+    <h1>Create Post</h1>
+  {% endif %}
     {% for message in get_flashed_messages() %}
       <div class="toast toast-success">
           <button class="btn btn-clear float-right"></button>
@@ -13,8 +24,13 @@
     {% endfor %}
 
 
+ {% if edit is defined and edit == True %}
+ <form action="{{ url_for('pages.edit_post', post_id=post_id) }}" method="POST" class="form-group" enctype="multipart/form-data">
+ {% else %}
+ <form action="/add" method="POST" class="form-group" enctype="multipart/form-data">
+ {% endif %}
 
-  <form action="/add" method="POST" class="form-group" enctype="multipart/form-data">
+
     {{ form.csrf_token() }}
     <label for="title">{{ form.title.label }}</label>
     {{ form.title(class="form-input", placeholder="title") }}
@@ -33,7 +49,7 @@
 
     <label for="body">{{ form.body.label }}</label>
     {{ form.body(class="form-input", placeholder="your article goes here", id='body') }}
-    {{ form.submit(class="btn btn-primary input-group-btn float-right", id="createPost") }}
+    {{ form.submit(class="btn btn-primary input-group-btn float-right", id="createPost", value="Save Post" if edit is defined and edit==True else "Create Post") }}
     {{ ckeditor.config(name='body') }}
   </form>
 {% endblock %}
