--- a/python_cms/templates/index.html.j2
+++ b/python_cms/templates/index.html.j2
@@ -33,6 +33,6 @@
   </div>
 {% endblock %}
 {% block bodysource %}
-<script src="{{url_for('static', filename='create_post.js')}}"></script>
+<script src="{{url_for('static', filename='post_function.js')}}"></script>
 
 {% endblock %}
