--- a/python_cms/templates/create_post.html.j2
+++ b/python_cms/templates/create_post.html.j2
@@ -1,47 +1,30 @@
 {% extends "base.html.j2" %}
 {% block title %}
-  {% if edit %}
-    Edit Post
-  {% else %}
-    Create Post
-  {% endif %}
+  Create Post
 {% endblock %}
 {% block headsource %}
   {{ ckeditor.load() }}
 {% endblock %}
 {% block content %}
-
-  {% if edit is defined and edit == True %}
-    <h1>Edit Post</h1>
-  {% else %}
-    <h1>Create Post</h1>
-  {% endif %}
-    {% for message in get_flashed_messages() %}
-      <div class="toast toast-success">
-          <button class="btn btn-clear float-right"></button>
-            {{message}}
-      </div>
-    {% endfor %}
-
-
- {% if edit is defined and edit == True %}
- <form action="{{ url_for('pages.edit_post', post_id=post_id) }}" method="POST" class="form-group" enctype="multipart/form-data">
- {% else %}
- <form action="/add" method="POST" class="form-group" enctype="multipart/form-data">
- {% endif %}
-
-
+  <h1>Create Post</h1>
+  {% for message in get_flashed_messages() %}
+    <div class="toast toast-success">
+        <button class="btn btn-clear float-right"></button>
+          {{message}}
+    </div>
+  {% endfor %}
+  <form action="/add" method="POST" class="form-group" enctype="multipart/form-data">
     {{ form.csrf_token() }}
     <label for="title">{{ form.title.label }}</label>
     {{ form.title(class="form-input", placeholder="title") }}
 
     {% if form.errors.teaser_image is defined %}
-        {% for error in form.errors.teaser_image %}
-          <div class="toast toast-error">
-            <button class="btn btn-clear float-right"></button>
-              {{error}}
-          </div>
-        {% endfor %}
+      {% for error in form.errors.teaser_image %}
+        <div class="toast toast-error">
+          <button class="btn btn-clear float-right"></button>
+          {{error}}
+        </div>
+      {% endfor %}
     {% endif %}
 
     <label for="teaser_image">{{ form.teaser_image.label }}</label>
@@ -49,11 +32,10 @@
 
     <label for="body">{{ form.body.label }}</label>
     {{ form.body(class="form-input", placeholder="your article goes here", id='body') }}
-    {{ form.submit(class="btn btn-primary input-group-btn float-right", id="createPost", value="Save Post" if edit is defined and edit==True else "Create Post") }}
+    {{ form.submit(class="btn btn-primary input-group-btn float-right", id="createPost", value="Create Post") }}
     {{ ckeditor.config(name='body') }}
   </form>
 {% endblock %}
-
 {% block bodysource %}
-<script src="{{url_for('static', filename='create_post.js')}}"></script>
+<script src="{{url_for('static', filename='post_function.js')}}"></script>
 {% endblock %}
