--- a/python_cms/templates/post.html.j2
+++ b/python_cms/templates/post.html.j2
@@ -1,43 +1,44 @@
 {% extends 'base.html.j2' %}
-{% block title %} {{ post.title }} {% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 
 {% block content %}
   {% if post.id is not defined %}
     <h1>Post not found</h1>
   {% else %}
     {% for message in get_flashed_messages() %}
-    <div class="toast toast-success">
+      <div class="toast toast-success">
         <button class="btn btn-clear float-right"></button>
-          {{message}}
-    </div>
+        {{ message }}
+      </div>
     {% endfor %}
     <div class="post-header">
       <h1>{{ post.title }}</h1>
-    <div class="button-container">
-      {% if current_user.is_authenticated %}{#delete and edit button available only for logged in users#}
-      <button onclick="location.href='{{ url_for('pages.edit_post', post_id=post.id) }}'"
-              class="btn btn-edit tooltip-bottom"
-              data-tooltip="Edit this post">
-              Edit
-      </button>
-      <button onclick="location.href='{{ url_for('pages.delete_post', post_id=post.id) }}'"
-              class="btn btn-delete tooltip-bottom"
-              data-tooltip="Permanently delete this post">
-              Delete
-      </button>
     </div>
-    
+    <div class="post-content">
+      {% if current_user.is_authenticated %}
+        <div class="button-container">
+          <button onclick="location.href='{{ url_for('pages.edit_post', post_id=post.id) }}'"
+                  class="btn btn-edit tooltip-bottom"
+                  data-tooltip="Edit this post">
+            Edit
+          </button>
+          <button onclick="location.href='{{ url_for('pages.delete_post', post_id=post.id) }}'"
+                  class="btn btn-delete tooltip-bottom"
+                  data-tooltip="Permanently delete this post">
+            Delete
+          </button>
+        </div>
       {% endif %}
+      {% if post.teaser_image == "" %}
+        <img src="{{ url_for('static', filename='default.jpg') }}" class="img-responsive article-image-inner" alt="">
+      {% else %}
+        <img src="/files/{{ post.teaser_image }}" class="img-responsive article-image-inner" alt="">
+      {% endif %}
+      {{ post.body|safe }}
     </div>
-    {% if post.teaser_image == "" %}
-      <img src="{{ url_for('static', filename='default.jpg') }}" class="img-responsive article-image-inner" alt="">
-    {% else %}
-      <img src="/files/{{ post.teaser_image }}" class="img-responsive article-image-inner" alt="">
-    {% endif %}
-    {{ post.body|safe }}
   {% endif %}
 {% endblock %}
-{% block bodysource %}
-<script src="{{url_for('static', filename='post_function.js')}}"></script>
-{% endblock %}
 
+{% block bodysource %}
+<script src="{{ url_for('static', filename='post_function.js') }}"></script>
+{% endblock %}
