--- a/python_cms/templates/index.html.j2
+++ b/python_cms/templates/index.html.j2
@@ -11,9 +11,10 @@
     </div>
   {% endfor %}
   <div class="columns">
-    {% for post in posts %}
+    <div class="promoted-posts">
+        {% for post in posts|selectattr("promoted", "equalto", True) %}
        <div class="column col-6 col-md-12">
-         <div class="card article-card">
+         <div class="promoted-card article-card">
            <div class="card-image">
              {% if post.teaser_image == "" %}
                <img src="{{ url_for('static', filename='default.jpg') }}" class="img-responsive article-image" alt="">
@@ -29,7 +30,33 @@
            </div>
          </div>
        </div>
-    {% endfor %}
+      {% endfor %}
+    
+    </div>
+    <div class="non-promoted-posts">
+        {% for post in posts|selectattr("promoted", "equalto", False) %}
+       <div class="column col-6 col-md-12">
+         <div class="non-promoted-card article-card">
+           <div class="card-image">
+             {% if post.teaser_image == "" %}
+               <img src="{{ url_for('static', filename='default.jpg') }}" class="img-responsive article-image" alt="">
+             {% else %}
+               <img src="/files/{{ post.teaser_image }}" class="img-responsive article-image" alt="">
+             {% endif %}
+           </div>
+           <div class="card-header">
+             <div class="card-title h5">{{ post.title }}</div>
+           </div>
+           <div class="card-footer">
+             <a class="btn btn-primary" href="/post/{{ post.id }}">Read More</a>
+           </div>
+         </div>
+       </div>
+      {% endfor %}   
+    </div>
+
+
+
   </div>
 {% endblock %}
 {% block bodysource %}
