--- a/python_cms/templates/index.html.j2
+++ b/python_cms/templates/index.html.j2
@@ -25,6 +25,7 @@
            <div class="card-header">
              <div class="card-title h5">{{ post.title }}</div>
            </div>
+           <p class="category-stamp">{{ post.category.name }}</p>
            <div class="card-footer">
              <a class="btn btn-primary" href="/post/{{ post.id }}">Read More</a>
            </div>
@@ -47,6 +48,7 @@
            <div class="card-header">
              <div class="card-title h5">{{ post.title }}</div>
            </div>
+           <p class="category-stamp">{{ post.category.name }}</p>
            <div class="card-footer">
              <a class="btn btn-primary" href="/post/{{ post.id }}">Read More</a>
            </div>
