--- a/python_cms/templates/create_post.html.j2
+++ b/python_cms/templates/create_post.html.j2
@@ -30,6 +30,18 @@
     <label for="teaser_image">{{ form.teaser_image.label }}</label>
     {{ form.teaser_image(class="form-input") }}
 
+    <div class="category-container">
+        <label class="form-label">{{ form.category.label }}</label>
+        {% for subfield in form.category %}
+        <label class="form-radio form-inline">
+          {{ subfield }}
+          <i class="form-icon"></i> {{ subfield.label.text }}
+        </label>
+    {% endfor %}
+
+    </div>
+
+
     <label for="body">{{ form.body.label }}</label>
     {{ form.body(class="form-input", placeholder="your article goes here", id='body') }}
     {{ form.submit(class="btn btn-primary input-group-btn float-right", id="createPost", value="Create Post") }}
@@ -39,6 +51,7 @@
       {{ form.promoted(class="form-input") }}
       <i class="form-icon"></i>
     </label>
+
   </form>
 {% endblock %}
 {% block bodysource %}
