--- a/python_cms/templates/edit_post.html.j2
+++ b/python_cms/templates/edit_post.html.j2
@@ -32,7 +32,16 @@
       <label for="teaser_image">{{ form.teaser_image.label}}</label>
       {{ form.teaser_image(class="form-input") }}
     {% endif %}
-    <br> 
+    
+        <div class="category-container">
+        <label class="form-label">{{ form.category.label }}</label>
+        {% for subfield in form.category %}
+        <label class="form-radio form-inline">
+          {{ subfield }}
+          <i class="form-icon"></i> {{ subfield.label.text }}
+        </label>
+    {% endfor %}
+    </div>
 
     <label for="body">{{ form.body.label }}</label>
     {{ form.body(class="form-input", placeholder="your article goes here", id='body') }}
